Minor bug fixes and added user context to app
