# server/app/src/go/docs/swagger.json
@@ -32,10 +32,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
+                            "$ref": "#/definitions/user.LoginResponse"
                         }
                     }
                 }
@@ -126,10 +123,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/skills.CreateSkillRequest"
-                            }
+                            "$ref": "#/definitions/skills.CreateSkillRequest"
                         }
                     }
                 ],
@@ -256,10 +250,10 @@
         "skills.UpdateSkillRequest": {
             "type": "object",
             "properties": {
-                "old_topic": {
+                "oldTopic": {
                     "type": "string"
                 },
-                "updated_topic": {
+                "updatedTopic": {
                     "type": "string"
                 }
             }
@@ -295,6 +289,26 @@
                 }
             }
         },
+        "user.GetCurrentUserResponse": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "first_name": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "last_name": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
         "user.GetUserResponse": {
             "type": "object",
             "properties": {
@@ -309,6 +323,17 @@
                 },
                 "username": {
                     "type": "string"
+                }
+            }
+        },
+        "user.LoginResponse": {
+            "type": "object",
+            "properties": {
+                "token": {
+                    "type": "string"
+                },
+                "user_info": {
+                    "$ref": "#/definitions/user.GetCurrentUserResponse"
                 }
             }
         }
